# cuda-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cursor_chat.md  requirements.txt
benchmark/: CMakeLists.txt  README.md  advanced_benchmark.cu  basic_benchmark.cu  benchmark.h  config_benchmark.cu  conv_benchmark.cu  error_benchmark.cu  interaction_benchmark.cu  kernel_benchmark.cu  memory_benchmark.cu  mma_benchmark.cu  runtime_benchmark.cu  stream_benchmark.cu  unified_memory_benchmark.cu
doc/: case_args.md  code_rules.md  do_not_optimize.md  google_benchmark.md  google_benchmark_args.md  preliminary_runs.md  set_counters.md
scripts/: build.sh  clang-format.sh  compare_optimizations.py  download_deps.sh  process_benchmark.py
